<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_dialog">
    <RadioGroup
            android:id="@+id/stateSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/ivOnlineSelected"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="12dp"
                android:text="@string/online"
                android:drawableEnd="@drawable/recent_online_big"/>

        <RadioButton
                android:id="@+id/ivBusySelected"

                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="2dp"
                android:text="@string/busy"
                android:drawableEnd="@drawable/recent_busy_big"/>

        <RadioButton
                android:id="@+id/ivAwaySelected"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="2dp"
                android:text="@string/away"
                android:drawableEnd="@drawable/recent_away_big"/>

    </RadioGroup>

</LinearLayout>