<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mrlMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/login_bg">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="22dp"
            android:persistentDrawingCache="none"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="1.0dp">

            <ImageView
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="@drawable/logo_img"/>

            <ImageView
                    android:background="@drawable/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="98.0dp"
                android:orientation="vertical"
                android:background="@drawable/logintext_bg"
                android:paddingLeft="8.0dp"
                android:paddingRight="8.0dp"
                android:layout_marginTop="4.0dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logintext_fg"
                    android:layout_marginTop="4.0dp"
                    android:layout_weight="1.0">

                <ImageView
                        android:id="@+id/ivClearUsername"
                        android:layout_width="35.0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/logintext_fg"
                        android:src="@drawable/login_clear_all_input"
                        android:visibility="gone"
                        android:scaleType="center"
                        android:layout_alignParentRight="true"/>

                <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14.0sp"
                        android:textColor="#ff333333"
                        android:background="@drawable/logintext_fg"
                        android:paddingLeft="5.0dp"
                        android:paddingRight="5.0dp"
                        android:hint="@string/account"
                        android:singleLine="true"
                        android:maxLength="200"
                        android:layout_toLeftOf="@id/ivClearUsername"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logintext_fg"
                    android:layout_marginTop="5.0dp"
                    android:layout_marginBottom="5.0dp"
                    android:layout_weight="1.0">

                <ImageView
                        android:id="@+id/ivClearPassword"
                        android:layout_width="35.0dp"
                        android:layout_height="fill_parent"
                        android:background="@drawable/logintext_fg"
                        android:src="@drawable/login_clear_all_input"
                        android:visibility="gone"
                        android:scaleType="center"
                        android:layout_alignParentRight="true"/>

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14.0sp"
                        android:textColor="#ff333333"
                        android:background="@drawable/logintext_fg"
                        android:paddingLeft="5.0dp"
                        android:paddingRight="5.0dp"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:maxLength="64"
                        android:layout_toLeftOf="@id/ivClearPassword"/>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dp">

            <RelativeLayout
                    android:id="@+id/llState"
                    android:layout_width="48.0dp"
                    android:layout_height="32.0dp">

                <LinearLayout
                        android:background="@drawable/login_state_selector_bg"
                        android:layout_width="35.0dp"
                        android:layout_height="18.0dp"
                        android:layout_marginLeft="3.0dp"
                        android:layout_marginTop="7.0dp">
                    <ImageView
                            android:id="@+id/ivState"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4.0dp"
                            android:src="@drawable/recent_online_big"/>
                    <ImageView
                            android:id="@+id/ivStatePointer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2.0dp"
                            android:layout_marginTop="6.5dp"
                            android:src="@drawable/login_select_pointer_down"/>
                </LinearLayout>
            </RelativeLayout>

            <CheckBox
                    android:id="@+id/isRememberPassword"
                    android:textSize="14.0sp"
                    android:textColor="@color/cwhite"
                    android:paddingLeft="25.0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="33.0dp"
                    android:layout_marginRight="3.0dp"
                    android:button="@drawable/login_checkbox"
                    android:text="@string/savepass"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="40.0dp"
                android:textSize="14.0sp"
                android:textColor="@color/white"
                android:background="@drawable/login_button"
                android:layout_marginTop="22.0dp"
                android:text="@string/login"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="240.0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16.0dp"
            android:layout_marginLeft="38.0dp"
            android:layout_marginRight="38.0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

        <ImageView
                android:id="@+id/copyrightview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/copyright_icon"/>

        <TextView
                android:layout_toRightOf="@id/copyrightview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8.0sp"
                android:textStyle="bold"
                android:textColor="#ff464a4e"
                android:gravity="center_horizontal"
                android:paddingTop="3.0dp"
                android:text="@string/hw_copy_right"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/settingBtn"
            android:layout_width="38.0dp"
            android:layout_height="38.0dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">

        <ImageView
                android:layout_width="20.0dp"
                android:layout_height="20.0dp"
                android:layout_marginRight="13.0dp"
                android:layout_marginBottom="18.0dp"
                android:src="@drawable/setting_btn"/>
    </LinearLayout>
</RelativeLayout>